fix spinner alignment

--- a/src/components/spinner/spinner.styles.css
+++ b/src/components/spinner/spinner.styles.css
@@ -4,6 +4,7 @@
     justify-content: center;
     width: 100%;
     height: 90vh;
+    padding-bottom: var(--space-xl);
 }
 
 .spinner > .material-icons {
